# luketils

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  debug_pstats.py  pyproject.toml  setup.py  test_profiler.py
examples/: marimo_profile_example.py  profiler_demo.py  profiler_improvements.md  proxy_all.py  remote_exec_example.py  test_marimo_profile.py
examples/data/: load_image.py
examples/visualization/: line_plot.py  plot_bounding_box_gallery.py  plot_latents.py  plot_learning_curve.py
luketils/: __init__.py  deep_freeze.py  marimo_profile.py  marimo_profile_renderer.py  profiler.py  test_format_function_key.py  weak_ref_ignore_hash.py
luketils/artifacts/: __init__.py  base.py  collection.py  file.py  path.py
luketils/callbacks/: __init__.py  visualize_object_detection_predictions.py
luketils/cli/: remote_exec.py
luketils/colab/: __init__.py  get_strategy.py  keras_cv_cuda.py
luketils/data/: __init__.py  get_file.py  load_image.py  remote_file.py  remote_image_test.py
luketils/drawing/: __init__.py  draw_bounding_boxes.py
luketils/git_utils/: repo.py
luketils/proxy_traffic/: __init__.py  proxy_with_socks5.py
luketils/remote/: execution.py  executor.py  function_wrapper.py  paramiko_executor.py  remote_entrypoint.py  ssh_client.py  ssh_function.py  sync.py
luketils/utils/: __init__.py  ensure_exists.py  experiment_name.py  increase_resource_limit.py  tf_cap_memory.py  to_numpy.py
luketils/visualization/: __init__.py  draw_bounding_boxes.py  line_plot.py  plot_bounding_box_gallery.py  plot_gallery.py  plot_latents.py
